SMHE-1267: Add tests for periodic pq data
Signed-off-by: stefanermens <stefan.ermens@alliander.com>